hphp/hack/test/typecheck/is_expression/this.php.exp
File "this.php", line 9, characters 26-27:
Invalid argument (Typing[4110])
  File "this.php", line 9, characters 7-12:
  This is the expression dependent type this
  File "this.php", line 4, characters 31-35:
  It is incompatible with a mixed value
File "this.php", line 10, characters 24-25:
Invalid argument (Typing[4110])
  File "this.php", line 10, characters 7-10:
  This is the expression dependent type this
  File "this.php", line 4, characters 31-35:
  It is incompatible with a mixed value
